# vm-test

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
include/: eosevm.h
lib/: CMakeLists.txt  base58.cpp  cypto.cpp  cypto.hpp  eosevm.cpp  execution.cpp  execution.hpp  mocked_context.hpp  name.hpp  other_fc.hpp  serialization.cpp  serialization.hpp  utils.hpp  vm.hpp
lib/contract/: challenge_contract.hpp  eosio_token_contract.hpp
lib/contract/add/: add_project.abi  add_project.wasm
lib/contract/challenge/: eos_evm.abi  eos_evm.wasm
lib/contract/multi_index_example/: multi_index_example.abi  multi_index_example.wasm
secp256k1/: CMakeLists.txt  libsecp256k1-config.h
secp256k1/cmake/: FindGMP.cmake
test/: CMakeLists.txt  challenge_test.cpp  challenge_tester.hpp  eosio_token_test.cpp  eosio_token_tester.hpp  eosvm_tester.hpp  hello_test.cpp  mocked_context.hpp  multi_index_test.cpp  multi_index_tester.hpp  name.hpp  other_fc.cpp  other_fc.hpp  serialization.hpp  utils.hpp  vm_test.cpp
test/contract/add/: add_project.wat
test/contract/challenge/: eos_evm.abi  eos_evm.wasm  test_contract.abi  test_contract.wasm
test/contract/eosio.token/: eosio.token.wat
test/contract/multi_index_emample/: multi_index_example.wat
vm/: CMakeLists.txt
